k8s/base/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: flask-app
spec:
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: backend
        image: backend_image:0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1G"
            cpu: "1"
          limits:
            memory: "2G"
            cpu: "1.5"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /ready
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
