k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: flask-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
